Update readmes, add more info and json dumping.